# neatkube

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.gh  LICENSE  README.md  repository.yaml  rustfmt.toml
.github/: FUNDING.yml
.github/actions/rust-build/: action.yaml
.github/workflows/: check.yaml  release.yaml
src/: dirs.rs  download.rs  error.rs  lib.rs
src/cmd/: cfg_pack.rs  completion.rs  config_pack.rs  copy.rs  mod.rs  shell.rs  tool.rs  toolbox.rs
src/completion/: bash.rs  mod.rs  zsh.rs
src/podutil/: builder.rs  exec.rs  file_transfer.rs  mod.rs  upload.rs
src/toolbox/: mod.rs  repository.rs  tool.rs  toolbox.rs
src/toolbox/platform/: mod.rs  unix.rs  win.rs
src/toolbox/upstream/: github_release.rs  mod.rs  simple.rs
tests/: toolbox_test.rs
