[package]
name = "neatkube"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1

[[bin]]
name = "nk"

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
clap = { version = "3.2.6", features = ["derive", "env"] }
dewey = "0.2.0"
directories = "4.0.1"
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
kube-client = "0.73.1"
nix = { version = "0.24.1", features = ["process"] }
reqwest = { version = "0.11.11", features = ["stream"] }
secrecy = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
tempfile = "3.3.0"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.9"
backtrace = "0.3.65"
clap_complete = "3.2.2"
log = "0.4.17"
futures = "0.3.21"
indicatif = "0.16.2"
random-string = "1.0.0"
os_str_bytes = { version = "6.1.0", default-features = false, features = ["raw_os_str"] }
