[package]
name = "neatkube"
version = "0.5.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1

[[bin]]
name = "nk"

[dependencies]
backtrace = "0.3.66"
base64 = "0.13.0"
bytes = "1.2.0"
clap = { version = "3.2.14", features = ["derive", "env"] }
clap_complete = "3.2.3"
dewey = "0.2.0"
directories = "4.0.1"
edit = "0.1.4"
futures = "0.3.21"
indicatif = "0.16.2"
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
kube-client = "0.74.0"
log = "0.4.17"
nix = { version = "0.24.2", features = ["process"] }
openssl = { version = "0.10.41", features = ["vendored", "v111"] }
os_str_bytes = { version = "6.2.0", default-features = false, features = ["raw_os_str"] }
randstr = "0.2.1"
reqwest = { version = "0.11.11", features = ["stream"] }
secrecy = "0.8.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.8.26"
tokio = { version = "1.20.0", features = ["rt-multi-thread", "process", "macros"] }
tokio-stream = "0.1.9"
minitmpl = { git = "https://github.com/Gottox/minitmpl.git", branch = "main" }
env_logger = "0.9.0"
