[package]
name = "neatkube"
version = "0.5.2"
edition = "2021"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1

[[bin]]
name = "nk"

[dependencies]
backtrace = "0.3.67"
base64 = "0.21.0"
bytes = "1.3.0"
clap = { version = "3.2.23", features = ["derive", "env"] }
clap_complete = "3.2.5"
dewey = "0.3.0"
directories = "4.0.1"
edit = "0.1.4"
futures = "0.3.25"
indicatif = "0.17.3"
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
kube-client = "0.78.0"
log = "0.4.17"
nix = { version = "0.26.2", features = ["process"] }
openssl = { version = "0.10.45", features = ["vendored", "v111"] }
os_str_bytes = { version = "6.4.1", default-features = false, features = ["raw_os_str"] }
randstr = "0.2.1"
reqwest = { version = "0.11.14", features = ["stream"] }
secrecy = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "process", "macros"] }
tokio-stream = "0.1.11"
minitmpl = { git = "https://github.com/Gottox/minitmpl.git", branch = "main" }
env_logger = "0.10.0"

[dev-dependencies]
tempfile = "3.3.0"
tokio-test = "0.4.2"
